# Phising-Orchestrator-Takedown

./: .env.example  .gitignore  ETHICS.md  Niriksh Phished Domains - Sheet1.csv  README.md  SECURITY.md  findings.jsonl  pyproject.toml  requirements.txt
examples/: sample_config.yaml  seed_urls.csv
src/app/: config.py  models.py
src/cli/: main.py
src/discovery/: __init__.py  feeds.py
src/phish_takedown_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config_and_models.py  test_discovery.py
